Prevent page from becomming too narrow (squishy).

--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -8,6 +8,8 @@ body {
     color: light-dark(#181020, #c0b0b8);
     
     font-family: sans-serif;
+    
+    min-width: 500px;
 }
 
 @media (orientation:landscape) {
