--- a/public_html/css/menu.css
+++ b/public_html/css/menu.css
@@ -9,7 +9,10 @@ td.menu-bar:hover {
 }
 
 td.menu-square {
-    width: 50px;
+    min-width: 50px;
+    /*max-width: 50px;
+    /*
+    width: 50px;*/
 }
 
 div.drop-down {
